--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -11037,6 +11037,10 @@ p {
       padding-left: 0;
       padding-right: 0; } }
 
+@media (max-width: 1357px) {
+  .nl-create-team-table .nav-tabs .nav-link {
+    min-width: 3.625rem; } }
+
 .nl-create-team-table .nl-players-search {
   min-width: 9.75rem;
   max-width: 10rem; }
@@ -11049,10 +11053,6 @@ p {
 @media (min-width: 992px) and (max-width: 1425px) {
   .nl-create-team-table .table-striped tbody tr td.avatar img {
     display: none; } }
-
-@media (min-width: 1441px) and (max-width: 2000px) {
-  .nl-create-team-table {
-    position: absolute; } }
 
 .nl-create-team-table td, .nl-create-team-table th {
   padding: 0.25rem 0.25rem;
@@ -11153,7 +11153,7 @@ p {
 .nl-create-team .player-main-block {
   width: 100%;
   height: 100%;
-  min-height: 563px;
+  min-height: 625px;
   position: relative; }
   .nl-create-team .player-main-block .nl-G-position {
     bottom: 6.5%;
@@ -11202,13 +11202,13 @@ p {
       top: 2.5%;
       left: 43%; } }
   .nl-create-team .player-main-block.football {
-    min-height: 511px;
+    min-height: 562px;
     margin-top: 80px;
     margin-bottom: 30px; }
     @media (min-width: 1200px) and (max-width: 1425px) {
       .nl-create-team .player-main-block.football {
-        min-height: 465px;
-        max-height: 465px; } }
+        min-height: 500px;
+        max-height: 521px; } }
     .nl-create-team .player-main-block.football .nl-FLEX-position {
       bottom: 8.8%;
       right: 7%; }
@@ -11246,9 +11246,9 @@ p {
   background-size: 100% 100%; }
   @media only screen and (min-width: 992px) and (max-width: 1200px) {
     .nl-create-team .nl-team-field .football.player-main-block {
-      min-height: 373px; }
+      min-height: 401px; }
     .nl-create-team .nl-team-field .soccer.player-main-block {
-      min-height: 418px; }
+      min-height: 465px; }
       .nl-create-team .nl-team-field .soccer.player-main-block img {
         max-width: 50px; }
     .nl-create-team .nl-team-field .football .nl-RRB-position {
@@ -11261,8 +11261,8 @@ p {
       top: 20%; } }
   @media (min-width: 1200px) and (max-width: 1425px) {
     .nl-create-team .nl-team-field .soccer {
-      min-height: 507px;
-      max-height: 507px; } }
+      min-height: 558px;
+      max-height: 558px; } }
   .nl-create-team .nl-team-field.football {
     background: url(../img/football/nl-football-field.png) no-repeat 0 0;
     background-size: contain;
