--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -1,10 +1,10 @@
 section.nl-section.nl-players.nl-create-team
     div.container-fluid
         div.row
-            div.col-md-12
+            div.col-md-8.offset-md-2.col-lg-12.col-xl-12.offset-lg-0.offset-xl-0
                 h1 CREATE TEAM
         div.row
-            div.col-md-12.col-lg-7.col-xl-7
+            div.col-md-8.offset-md-2.col-lg-7.offset-lg-0.offset-xl-0.col-xl-7
                 div.nl-players-table.nl-create-team-table
                     div.nl-players-table-data-field
                         div.nl-data--avatar.hidden-sm-down
