--- a/markup/_layouts/_content/enter_contests_content.jade
+++ b/markup/_layouts/_content/enter_contests_content.jade
@@ -300,4 +300,4 @@ section.nl-section.nl-players.nl-enter-contests.soccer
 						thead
 							tr
 								th 
-									button.btn.btn-primary Payout
+									button.btn.btn-primary.payout Payout
