--- a/markup/_layouts/_content/football_enter_contests_content.jade
+++ b/markup/_layouts/_content/football_enter_contests_content.jade
@@ -277,5 +277,5 @@ section.nl-section.nl-players.nl-enter-contests
 						thead
 							tr
 								th 
-									button.btn.btn-primary Payout
+									button.btn.btn-primary.payout Payout
 
