--- a/markup/_scss/sections/_nl-enter-contests.scss
+++ b/markup/_scss/sections/_nl-enter-contests.scss
@@ -1,5 +1,9 @@
 .nl-enter-contests {
 
+  .payout {
+    margin: 8px;
+  }
+
   .player-main-block{
   width: 100%;
   height: 100%;
@@ -108,7 +112,7 @@
       right: 15%;
     }
     .nl-TE-position{
-      top: -11%;
+      top: -9%;
       right: 34%;
     }
     .nl-team-logo-position{
@@ -212,8 +216,8 @@
   }
 
   .nl-team-field {
-    max-height: 460px;
-    min-height: 458px;
+    max-height: 500px;
+    min-height: 496px;
 
     .nl-ST-position {
       top: -1.5%;
@@ -230,7 +234,7 @@
 
   .football.nl-team-field {
     max-height: 397px;
-    min-height: 396px;
+    min-height: 434px;
   }
 
   .nl-team-field.football .nl-player-block img {
@@ -244,7 +248,7 @@
   }
 
   .soccer .player-main-block {
-    min-height: 450px;
+    min-height: 496px;
 
     img {
       max-width: 60px;
@@ -258,7 +262,7 @@
   @media (max-width: 1200px) {
 
       .player-main-block.football {
-        min-height: 322px;
+        min-height: 422px;
         margin-top: 35px;
 
         .nl-LRB-position {
@@ -274,7 +278,7 @@
       }
 
       .soccer .player-main-block {
-        min-height: 378px;
+        min-height: 382px;
         
         img {
           max-width: 47px;
@@ -285,13 +289,13 @@
         }
       }
       .nl-team-field.soccer  {
-        max-height: 351px;
-        min-height: 355px;
+        max-height: 400px;
+        min-height: 398px;
         margin-top: 35px;;
       }
       .football.nl-team-field {
         max-height: 370px;
-        min-height: 354px;
+        min-height: 422px;
       }
     }
   
