--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -889,6 +889,10 @@ section.nl-section.nl-players.nl-create-team.soccer
                         div.tab-pane(id="a" role="tabpanel") TAB5
 
             div.col-md-12.col-lg-5.col-xl-5
+                div.save-delete
+                    button.btn.btn-primary Save
+                    button.btn.btn-warning Delete
+                
                 div.nl-team-info
                     div.nl-team-name your team
                     div.nl-team-data
@@ -908,9 +912,10 @@ section.nl-section.nl-players.nl-create-team.soccer
                             div.col-7 Projections:
                             div.col-5
                                 span 154
-                div.nl-team-button
+                div.nl-team-button   
                     button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
                     button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
+
                 div.nl-team-field
                     div.player-main-block.soccer
                         div.nl-player-block.nl-G-position(data-position="G")
