--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -649,6 +649,10 @@ section.nl-section.nl-players.nl-create-team
 
 
             div.col-md-12.col-lg-5.col-xl-5
+                div.save-delete
+                    button.btn.btn-primary Save
+                    button.btn.btn-warning Delete
+                    
                 div.nl-team-info
                     div.nl-team-name your team
                     div.nl-team-data
