--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -1,7 +1,33 @@
+.btn-big-radius {
+  padding: 5px;
+  font-size: 11px;
+}
+
 .nl-create-team {
 
-  .nl-team-info {
+  .btn-big-radius {
+    padding: 5px;
+    font-size: 11px;
 
+    
+  }
+
+  .save-delete {
+    text-align: center;
+    margin-bottom: 20px;
+
+    @include respond-to (allsmall) {
+      margin-top: 20px;
+    }
+
+    button {
+      font-weight: 600;
+      padding: 0.75rem 3rem;
+      border-radius: 0.625rem;
+    }
+  }
+
+  .nl-team-info {
      @include respond-to(allsmall){
       margin-top: 10px;
     }    
@@ -172,7 +198,7 @@
 
     width: 100%;
     height: 100%;
-    min-height: 625px;
+    min-height: 563px;
     position: relative;
 
     .nl-G-position{
@@ -246,11 +272,11 @@
     }
 
     &.football{
-      min-height: 562px;
+      min-height: 509px;
 
       @media (min-width: 1200px) and (max-width:1425px) {
-        min-height: 500px;
-        max-height: 521px;
+        min-height: 444px;
+        max-height: 450px;
       }
 
       margin-top: 80px;
@@ -307,11 +333,12 @@
   @include respond-to(wide-tablets){
     
     .football.player-main-block {
-      min-height: 401px;
+      margin-top: 50px;
+      min-height: 381px;
     }
 
     .soccer.player-main-block {
-      min-height: 465px;
+      min-height: 408px;
 
       img {
         max-width: 50px;
@@ -338,7 +365,7 @@
 
   .soccer {
     @media (min-width: 1200px) and (max-width:1425px) {
-      min-height: 558px;
+      min-height: 499px;
       max-height: 558px;
     }  
   }
@@ -363,7 +390,7 @@
 
       .nl-player-block{
         img{
-          max-width: 115px;
+          max-width: 104px;
           @include respond-to(wide-tablets){
             max-width: 81px;
           }
