--- a/markup/_layouts/_content/register-content.jade
+++ b/markup/_layouts/_content/register-content.jade
@@ -1,8 +1,8 @@
 //- <div class="nl-white-bg"></div>
 section.nl-section.registration-wrapper
     div.row
-        .col-xl-3.col-lg-2.col-md-2.col-sm-2 
-        .col-xl-6.col-lg-8.col-md-8.col-sm-8 
+        .col-1.col-sm-2.col-md-2.col-lg-2.col-xl-3
+        .col-10.col-sm-8.col-md-8.col-lg-8.col-xl-6
             #registrationSection(tabindex='-1', role='dialog', aria-labelledby='loginSectionLabel', aria-hidden='true')
                 .block-dialog(role='document')
                 .block-content
@@ -60,4 +60,4 @@ section.nl-section.registration-wrapper
 
                     .block-footer
                         button.btn.btn-primary.btn-block(type='submit') REGISTER
-        .col-xl-3.col-lg-2.col-md-2.col-sm-2
+        .col-1.col-sm-2.col-md-2.col-lg-2.col-xl-3
