--- a/markup/_scss/sections/_login.scss
+++ b/markup/_scss/sections/_login.scss
@@ -75,7 +75,7 @@ position: relative;
     height: 100%;
     padding: 0.5rem 6.25rem 0;
     @include respond-to(allsmall){
-      padding: calculateRem(72px) calculateRem(20px) 0;
+      padding: 0.5rem 1.25rem 0;
     }
     input {
       border-top-right-radius: 0.3rem;
