--- a/markup/_layouts/_content/homepage-content.jade
+++ b/markup/_layouts/_content/homepage-content.jade
@@ -1,4 +1,4 @@
-section.nl-section.nl-players.homepage
+section.nl-section.homepage
 	div.container-wider
 		div.row.sports-options
 			h3.title.col-lg-6 Pick Your Sport:
