--- a/markup/_layouts/_content/_homepage/field.jade
+++ b/markup/_layouts/_content/_homepage/field.jade
@@ -1,169 +1,184 @@
-div.homepage-fieldpage
-	div.row
-		div.col-md-12
-			h5 My teams
-	div.row.nl-no-wrap.field-dropdown
-		div.col-lg-12
-			.dropdown
-				button.btn.btn-primary(type='button', data-toggle='dropdown') FantasyFootballGod
-					i.fa.fa-caret-down
-				ul.dropdown-menu(id="dropdown-in-field")
-					li(role='presentation')
-						a(role='menuitem', tabindex='-1', value='#field1') FantasyFootballGod
-					li(role='presentation')
-						a(role='menuitem', tabindex='-1', value='#field2') FantasyFootballGod2
-					li(role='presentation')
-						a(role='menuitem', tabindex='-1', value='#field3') FantasyFootballGod3
-					
-	div.tab-content(id="field-content")
-		div(role='tabpanel' class='tab-pane active top-level-panel3' id='field1')
-			div.nl-team-button.homepage-field
+section.nl-section.nl-create-team.homepage-field
+	div.container-fluid
+		div.row
+			div.col-md-8.offset-md-2.col-lg-12.col-xl-12.offset-lg-0.offset-xl-0
+				h5 MY TEAMS
+			div.col-md-12.col-lg-12.col-xl-12
+				form.form-signin
+					.input-group
+						select#country.form-control.custom-select(placeholder='COUNTRY', required='')
+							option(selected='' disabled='' hidden='') COUNTRY
+							option USA
+							option CANADA
+							option UK
+							option PORTUGAL 
+
+				div.nl-team-button
 					button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
 					button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
 				div.nl-team-field.football
-					div.striker-line
-					div.midfielder-line
-					div.defender-line
 					div.player-main-block.football
 						div.nl-player-block.nl-FLEX-position(data-position="FLEX")
-							img(class="homepage-field-player" src="assets/img/football/img-FLEX.png" alt="FLEX")
+							img(src="assets/img/football/FLEX.png" alt="FLEX")
 							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-K-position(data-position="K")
-							img(class="homepage-field-player" src="assets/img/football/img-K.png" alt="K")
+							img(src="assets/img/football/K.png" alt="K")
 							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-LRB-position(data-position="LRB")
-							img(class="homepage-field-player" src="assets/img/football/img-LRB.png" alt="LRB")
+							img(src="assets/img/football/LRB.png" alt="LRB")
 							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-RRB-position(data-position="RRB")
-							img(class="homepage-field-player" src="assets/img/football/img-RRB.png" alt="RRB")
+							img(src="assets/img/football/RRB.png" alt="RRB")
 							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-QB-position(data-position="QB")
-							img(class="homepage-field-player" src="assets/img/football/img-QB.png" alt="QB")
+							img(src="assets/img/football/QB.png" alt="QB")
 							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-LWR-position(data-position="LWR")
-							img(class="homepage-field-player" src="assets/img/football/img-LWR.png" alt="LWR")
+							img(src="assets/img/football/LWR.png" alt="LWR")
 							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-RWR-position(data-position="RWR")
-							img(class="homepage-field-player" src="assets/img/football/img-RWR.png" alt="RWR")
+							img(src="assets/img/football/RWR.png" alt="RWR")
 							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-TE-position(data-position="TE")
-							img(class="homepage-field-player" src="assets/img/football/img-TE.png" alt="TE")
+							img(src="assets/img/football/TE.png" alt="TE")
 							div.nl-player-block--data
+								button.btn.btn-link.btn-player-close(type="button") <i class="fa fa-close" aria-hidden="true"></i>
 								p gronkowski
 								p.data <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-team-logo-position
 							img(src="assets/img/football/team-logo.png" alt="logo")
 
-				div.nl-team-list.nl-my-teams.hide.homepage-updated
+
+				div.nl-team-info
+					div.nl-team-data
+						div.row 
+							div.col-lg-4
+								button.btn.btn-primary EDIT
+							div.col-lg-8
+								div.row
+									div.col-8 SALARY CAP:
+									div.col-4
+										span $65000
+						
+									div.col-8 TOTAL SALARY:
+									div.col-4
+										span $46730
+						
+									div.col-8 Available:
+									div.col-4
+										span.avalibe $25000
+
+				div.nl-team-list.nl-my-teams.hide
 					.nl-card-wrapper
 						.row
 							.col-12
 								div.nl-team-card.table-data-field
 									h3 team NLC2
-									<img src="assets/img/helmet.png" alt="helmet">
+									<img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
 
 						.row
 							.col-12
-								table.table.table-striped
+								table.table.table-striped.nl-team-list-table
 									thead
 										tr
 
-											th.homepage-list-view NAME
-											th.homepage-list-view POS
-											th.homepage-list-view FP
-											th.homepage-list-view SALARY
+											th NAME
+											th POS
+											th FP
+											th SALARY
+											th
 
 									tbody
 										tr
 
-											td.homepage-list-view Player name
-											td.homepage-list-view.pos FLEX
-											td.homepage-list-view 30
-											td.homepage-list-view $0
+											td Player name
+											td.pos FLEX
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
 										tr
 
-											td.homepage-list-view Player name
-											td.homepage-list-view.pos K
-											td.homepage-list-view 30
-											td.homepage-list-view $0
+											td Player name
+											td.pos K
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
 										tr
 
-											td.homepage-list-view Player name
-											td.homepage-list-view.pos LRB
-											td.homepage-list-view 30
-											td.homepage-list-view $0
+											td Player name
+											td.pos RB
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
 										tr
 
-											td.homepage-list-view Player name
-											td.homepage-list-view.pos RRB
-											td.homepage-list-view 30
-											td.homepage-list-view $0
+											td Player name
+											td.pos RB
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
 										tr
 
-											td.homepage-list-view Player name
-											td.homepage-list-view.pos QB
-											td.homepage-list-view 30
-											td.homepage-list-view $0
+											td Player name
+											td.pos QB
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
 										tr
 
-											td.homepage-list-view Player name
-											td.homepage-list-view.pos LWR
-											td.homepage-list-view 30
-											td.homepage-list-view $0
+											td Player name
+											td.pos WR
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
 										tr
 
-											td.homepage-list-view Player name
-											td.homepage-list-view.pos RWR
-											td.homepage-list-view 30
-											td.homepage-list-view $0
+											td Player name
+											td.pos WR
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
 										tr
 
-											td.homepage-list-view Player name
-											td.homepage-list-view.pos TE
-											td.homepage-list-view 30
-											td.homepage-list-view $0
+											td Player name
+											td.pos TE
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
+										tr
 
-
-			div.nl-team-info.my-teams
-				div.edit-team
-					div.block-footer
-						button.btn.btn-primary.btn-block(type='submit', href="#") Edit
-				div.my-teams-data
-					div.nl-team-data
-						div.row
-							div.col-6 Earnings:
-							div.col-6
-								span $25000
-						div.row
-							div.col-6 Total&nbsp;Salary:
-							div.col-6
-								span $46730
-						div.row
-							div.col-6 Projections:
-							div.col-6
-								span 154
-
-		div(role='tabpanel' class='tab-pane top-level-panel3' id='field2')
-			p field 2
-		div(role='tabpanel' class='tab-pane top-level-panel3' id='field3')
-			p field 3
-
-script(type='text/javascript').
-	$("#dropdown-in-field li a").click(function(){
-		$('#field-content .top-level-panel3').hide('tab');
-		$($(this).attr('value')).show('tab');
-	});
+											td Player name
+											td.pos DEF
+											td 30
+											td $0
+											td
+												button.btn.btn-primary.btn-sm.btn-warning cut
