players background updated to orange overlay

--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -11493,7 +11493,7 @@ td:nth-child(4).homepage-list-view {
         position: relative; } }
 
 .nl-players {
-  background: url(../img/background.png) bottom center no-repeat fixed;
+  background: url(../img/stadion_full.jpg) bottom center no-repeat fixed;
   background-size: cover;
   background-position: bottom;
   color: #121a31;
