--- a/markup/_scss/sections/_nl-players.scss
+++ b/markup/_scss/sections/_nl-players.scss
@@ -1,5 +1,5 @@
 .nl-players {
-  background: url(../img/background.png) bottom center no-repeat fixed;
+  background: url(../img/stadion_full.jpg) bottom center no-repeat fixed;
   background-size: cover;
   background-position: bottom;
   color: #121a31;
