updated css of homepage to be more responsive and tried to delete redundad classed in css code

--- a/markup/_layouts/_content/_homepage/top5-player.jade
+++ b/markup/_layouts/_content/_homepage/top5-player.jade
@@ -82,7 +82,7 @@ div.tab-content(id="top5-player-content")
 							a.nav-link.active(data-toggle="tab" href="#player1" role="tab")
 								div.menu-item.top-5
 									div.players 
-										div.player-thumbnail
+										div.player-thumbnail.top-5-images
 										div.number
 											p 1
 										div.player-thumbnail-name
@@ -91,7 +91,7 @@ div.tab-content(id="top5-player-content")
 							a.nav-link(data-toggle="tab" href="#player2" role="tab")
 								div.menu-item.top-5
 									div.players 
-										div.player-thumbnail
+										div.player-thumbnail.top-5-images
 										div.number
 											p 2
 										div.player-thumbnail-name
@@ -100,7 +100,7 @@ div.tab-content(id="top5-player-content")
 							a.nav-link(data-toggle="tab" href="#player3" role="tab")
 								div.menu-item.top-5
 									div.players 
-										div.player-thumbnail
+										div.player-thumbnail.top-5-images
 										div.number
 											p 3
 										div.player-thumbnail-name
@@ -109,7 +109,7 @@ div.tab-content(id="top5-player-content")
 							a.nav-link(data-toggle="tab" href="#player4" role="tab")
 								div.menu-item.top-5
 									div.players 
-										div.player-thumbnail
+										div.player-thumbnail.top-5-images
 										div.number
 											p 4
 										div.player-thumbnail-name
@@ -118,7 +118,7 @@ div.tab-content(id="top5-player-content")
 							a.nav-link(data-toggle="tab" href="#player5" role="tab")
 								div.menu-item.top-5
 									div.players 
-										div.player-thumbnail
+										div.player-thumbnail.top-5-images
 										div.number
 											p 5
 										div.player-thumbnail-name
